client/src/components/RelatedItems/style.css
.ri-parent {
  display: flex;
  flex-direction: column;
}

.ri-relateditems {
  display: flex;
  flex-direction: column;
  align-items: baseline;
}

.ri-comparision {
  display: flex;
  flex-direction: row;
}

/* .ri-item {
  display:flex;
  flex-direction:column;
  border:  5px solid green;
  border-radius: 20px;
  height:  300px;
  width: 150%;
  margin: 10px;
} */

.ri-eachitem {
  border:  5px solid green;
  border-radius: 5px;
  /* height:  100px; */
  width: 66%;
  margin: 10px;
}

.ri-slider {
  position: relative;
  height: 50vh;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 90%;
  min-width: 50%
}

.ri-container {
  height: 400px;
  width: 90%;
  position: relative;
  text-align: center;
  color: rebeccapurple;
  border: solid;
  margin: 5rem;
  object-fit: cover;
  object-position: bottom;
}

.bottom-left {
  position: absolute;
  text-align: left;
  bottom: 40px;
  left: 10px;
}

.ri-image {

  width: 70%;
  min-width: 50%;
  max-width: 100%;
  max-height: 60%;
  border-radius: 10px;
  margin: 20px;
}

.ri-thumbnails {
  display: flex;
  display: block;
  margin-left: auto;
  margin-right: auto;
  clear: both;
  width: 100px;
  border-radius: 2px;
  padding: 5px;
}

.right-arrow {
  position: absolute;
  top: 50%;
  right: 0px;
  font-size: 3rem;
  color:#000;
  z-index: 10;
  cursor: pointer;
  user-select: none;
}

.left-arrow {
  position: absolute;
  top: 50%;
  left: 100px;
  font-size: 3rem;
  color:#000;
  z-index: 10;
  cursor: pointer;
  user-select: none;
}

.ri-star {
  position: absolute;
  top: 1px;
  right: 50px;
  font-size: 3rem;
  z-index: 10;
  cursor: pointer;
}

.comp-additem {
  position: absolute;
  font-size: 6rem;
  color: rebeccapurple;
}

